--- a/artikel/04.tex
+++ b/artikel/04.tex
@@ -66,8 +66,8 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
   \label{itm:04-9}
 
   \item „Dritter“ eine natürliche oder juristische Person, Behörde, Einrichtung oder andere Stelle, außer der
-   \hyperref[itm:04-1]{betroffenen Person}, dem \hyperref[itm:04-7]{Verantwortlichen}, dem Auftragsverarbeiter und den Personen, die unter der unmittelbaren
-   Verantwortung des \hyperref[itm:04-7]{Verantwortlichen} oder des Auftragsverarbeiters befugt sind, die \hyperref[itm:04-1]{personenbezogenen Daten} zu
+   \hyperref[itm:04-1]{betroffenen Person}, dem \hyperref[itm:04-7]{Verantwortlichen}, dem \hyperref[itm:04-8]{Auftragsverarbeiter} und den Personen, die unter der unmittelbaren
+   Verantwortung des \hyperref[itm:04-7]{Verantwortlichen} oder des \hyperref[itm:04-8]{Auftragsverarbeiters} befugt sind, die \hyperref[itm:04-1]{personenbezogenen Daten} zu
    verarbeiten;
   \label{itm:04-10}
 
@@ -111,18 +111,18 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
      die derartige Entscheidungen trifft, als Hauptniederlassung;
     \label{itm:04-16a}
 
-    \item im Falle eines Auftragsverarbeiters mit Niederlassungen in mehr als einem Mitgliedstaat den Ort seiner
-     Hauptverwaltung in der Union oder, sofern der Auftragsverarbeiter keine Hauptverwaltung in der Union hat, die
-     Niederlassung des Auftragsverarbeiters in der Union, in der die Verarbeitungstätigkeiten im Rahmen der Tätigkeiten
-     einer Niederlassung eines Auftragsverarbeiters hauptsächlich stattfinden, soweit der Auftragsverarbeiter
+    \item im Falle eines \hyperref[itm:04-8]{Auftragsverarbeiters} mit Niederlassungen in mehr als einem Mitgliedstaat den Ort seiner
+     Hauptverwaltung in der Union oder, sofern der \hyperref[itm:04-8]{Auftragsverarbeiter} keine Hauptverwaltung in der Union hat, die
+     Niederlassung des \hyperref[itm:04-8]{Auftragsverarbeiters} in der Union, in der die Verarbeitungstätigkeiten im Rahmen der Tätigkeiten
+     einer Niederlassung eines \hyperref[itm:04-8]{Auftragsverarbeiters} hauptsächlich stattfinden, soweit der \hyperref[itm:04-8]{Auftragsverarbeiter}
      spezifischen Pflichten aus dieser Verordnung unterliegt;
     \label{itm:04-16b}
 
   \end{enumerate}
 
   \item „Vertreter“ eine in der Union niedergelassene natürliche oder juristische Person, die von dem \hyperref[itm:04-7]{Verantwortlichen}
-   oder Auftragsverarbeiter schriftlich gemäß \hyperref[ch:27]{Artikel 27} bestellt wurde und den \hyperref[itm:04-7]{Verantwortlichen} oder
-   Auftragsverarbeiter in Bezug auf die ihnen jeweils nach dieser Verordnung obliegenden Pflichten vertritt;
+   oder \hyperref[itm:04-8]{Auftragsverarbeiter} schriftlich gemäß \hyperref[ch:27]{Artikel 27} bestellt wurde und den \hyperref[itm:04-7]{Verantwortlichen} oder
+   \hyperref[itm:04-8]{Auftragsverarbeiter} in Bezug auf die ihnen jeweils nach dieser Verordnung obliegenden Pflichten vertritt;
   \label{itm:04-17}
 
   \item „Unternehmen“ eine natürliche und juristische Person, die eine wirtschaftliche Tätigkeit ausübt, unabhängig von
@@ -135,9 +135,9 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
   \label{itm:04-19}
 
   \item „verbindliche interne Datenschutzvorschriften“ Maßnahmen zum Schutz \hyperref[itm:04-1]{personenbezogener Daten}, zu deren Einhaltung
-   sich ein im Hoheitsgebiet eines Mitgliedstaats niedergelassener \hyperref[itm:04-7]{Verantwortlicher} oder Auftragsverarbeiter
+   sich ein im Hoheitsgebiet eines Mitgliedstaats niedergelassener \hyperref[itm:04-7]{Verantwortlicher} oder \hyperref[itm:04-8]{Auftragsverarbeiter}
    verpflichtet im Hinblick auf Datenübermittlungen oder eine Kategorie von Datenübermittlungen \hyperref[itm:04-1]{personenbezogener Daten}
-   an einen \hyperref[itm:04-7]{Verantwortlichen} oder Auftragsverarbeiter derselben \hyperref[itm:04-19]{Unternehmensgruppe} oder derselben Gruppe von
+   an einen \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref[itm:04-8]{Auftragsverarbeiter} derselben \hyperref[itm:04-19]{Unternehmensgruppe} oder derselben Gruppe von
    \hyperref[itm:04-18]{Unternehmen}, die eine gemeinsame Wirtschaftstätigkeit ausüben, in einem oder mehreren Drittländern;
   \label{itm:04-20}
 
@@ -151,7 +151,7 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
 
   \begin{enumerate}
 
-    \item der \hyperref[itm:04-7]{Verantwortliche} oder der Auftragsverarbeiter im Hoheitsgebiet des Mitgliedstaats dieser Aufsichtsbehörde
+    \item der \hyperref[itm:04-7]{Verantwortliche} oder der \hyperref[itm:04-8]{Auftragsverarbeiter} im Hoheitsgebiet des Mitgliedstaats dieser Aufsichtsbehörde
      niedergelassen ist,
     \label{itm:04-22a}
 
@@ -170,12 +170,12 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
   \begin{enumerate}
 
     \item eine \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten}, die im Rahmen der Tätigkeiten von Niederlassungen eines
-     \hyperref[itm:04-7]{Verantwortlichen} oder eines Auftragsverarbeiters in der Union in mehr als einem Mitgliedstaat erfolgt, wenn der
-     \hyperref[itm:04-7]{Verantwortliche} oder Auftragsverarbeiter in mehr als einem Mitgliedstaat niedergelassen ist, oder
+     \hyperref[itm:04-7]{Verantwortlichen} oder eines \hyperref[itm:04-8]{Auftragsverarbeiters} in der Union in mehr als einem Mitgliedstaat erfolgt, wenn der
+     \hyperref[itm:04-7]{Verantwortliche} oder \hyperref[itm:04-8]{Auftragsverarbeiter} in mehr als einem Mitgliedstaat niedergelassen ist, oder
     \label{itm:04-23a}
 
     \item eine \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten}, die im Rahmen der Tätigkeiten einer einzelnen Niederlassung eines
-     \hyperref[itm:04-7]{Verantwortlichen} oder eines Auftragsverarbeiters in der Union erfolgt, die jedoch erhebliche Auswirkungen auf
+     \hyperref[itm:04-7]{Verantwortlichen} oder eines \hyperref[itm:04-8]{Auftragsverarbeiters} in der Union erfolgt, die jedoch erhebliche Auswirkungen auf
      \hyperref[itm:04-1]{betroffene Personen} in mehr als einem Mitgliedstaat hat oder haben kann;
     \label{itm:04-23b}
 
@@ -183,7 +183,7 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
 
   \item „maßgeblicher und begründeter Einspruch“ einen Einspruch gegen einen Beschlussentwurf im Hinblick darauf, ob ein
    Verstoß gegen diese Verordnung vorliegt oder ob beabsichtigte Maßnahmen gegen den \hyperref[itm:04-7]{Verantwortlichen} oder den
-   Auftragsverarbeiter im Einklang mit dieser Verordnung steht, wobei aus diesem Einspruch die Tragweite der Risiken
+   \hyperref[itm:04-8]{Auftragsverarbeiter} im Einklang mit dieser Verordnung steht, wobei aus diesem Einspruch die Tragweite der Risiken
    klar hervorgeht, die von dem Beschlussentwurf in Bezug auf die Grundrechte und Grundfreiheiten der \hyperref[itm:04-1]{betroffenen
    Personen} und gegebenenfalls den freien Verkehr \hyperref[itm:04-1]{personenbezogener Daten} in der Union ausgehen;
   \label{itm:04-27}
