--- a/artikel/23.tex
+++ b/artikel/23.tex
@@ -7,7 +7,7 @@
 \begin{enumerate}
 
   \item Durch Rechtsvorschriften der Union oder der Mitgliedstaaten, denen der \hyperref[itm:04-7]{Verantwortliche} oder der
-   Auftragsverarbeiter unterliegt, können die Pflichten und Rechte gemäß den Artikeln \hyperref[ch:12]
+   \hyperref[itm:04-8]{Auftragsverarbeiter} unterliegt, können die Pflichten und Rechte gemäß den Artikeln \hyperref[ch:12]
    {12} bis \hyperref[ch:22]{22} und \hyperref[ch:34]{Artikel 34} sowie \hyperref[ch:5]{Artikel 5}, insofern dessen
    Bestimmungen den in den Artikeln \hyperref[ch:12]{12} bis \hyperref[ch:22]{22} vorgesehenen Rechten und Pflichten
    entsprechen, im Wege von Gesetzgebungsmaßnahmen beschränkt werden, sofern eine solche Beschränkung den Wesensgehalt
