--- a/artikel/33.tex
+++ b/artikel/33.tex
@@ -13,7 +13,7 @@
    nicht binnen 72 Stunden, so ist ihr eine Begründung für die Verzögerung beizufügen.
   \label{itm:33-1}
 
-  \item Wenn dem Auftragsverarbeiter eine \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} bekannt wird, meldet er diese
+  \item Wenn dem \hyperref[itm:04-8]{Auftragsverarbeiter} eine \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} bekannt wird, meldet er diese
    dem \hyperref[itm:04-7]{Verantwortlichen} unverzüglich.
   \label{itm:33-2}
 
