--- a/artikel/35.tex
+++ b/artikel/35.tex
@@ -80,7 +80,7 @@
   \end{enumerate}
 
   \item Die Einhaltung genehmigter Verhaltensregeln gemäß \hyperref[ch:40]{Artikel 40} durch die zuständigen
-   \hyperref[itm:04-7]{Verantwortlichen} oder die zuständigen Auftragsverarbeiter ist bei der Beurteilung der Auswirkungen der von diesen
+   \hyperref[itm:04-7]{Verantwortlichen} oder die zuständigen \hyperref[itm:04-8]{Auftragsverarbeiter} ist bei der Beurteilung der Auswirkungen der von diesen
    durchgeführten Verarbeitungsvorgänge, insbesondere für die Zwecke einer Datenschutz-Folgenabschätzung, gebührend zu
    berücksichtigen.
   \label{itm:35-8}
