--- a/artikel/36.tex
+++ b/artikel/36.tex
@@ -14,11 +14,11 @@
   \item Falls die \hyperref[itm:04-21]{Aufsichtsbehörde} der Auffassung ist, dass die geplante \hyperref[itm:04-2]{Verarbeitung} gemäß \hyperref[itm:36-1]
    {Absatz 1} nicht im Einklang mit dieser Verordnung stünde, insbesondere weil der \hyperref[itm:04-7]{Verantwortliche} das Risiko nicht
    ausreichend ermittelt oder nicht ausreichend eingedämmt hat, unterbreitet sie dem \hyperref[itm:04-7]{Verantwortlichen} und
-   gegebenenfalls dem Auftragsverarbeiter innerhalb eines Zeitraums von bis zu acht Wochen nach Erhalt des Ersuchens um
+   gegebenenfalls dem \hyperref[itm:04-8]{Auftragsverarbeiter} innerhalb eines Zeitraums von bis zu acht Wochen nach Erhalt des Ersuchens um
    Konsultation entsprechende schriftliche Empfehlungen und kann ihre in \hyperref[ch:58]{Artikel 58} genannten
    Befugnisse ausüben. Diese Frist kann unter Berücksichtigung der Komplexität der geplanten \hyperref[itm:04-2]{Verarbeitung} um sechs
    Wochen verlängert werden. Die \hyperref[itm:04-21]{Aufsichtsbehörde} unterrichtet den \hyperref[itm:04-7]{Verantwortlichen} oder gegebenenfalls den
-   Auftragsverarbeiter über eine solche Fristverlängerung innerhalb eines Monats nach Eingang des Antrags auf
+   \hyperref[itm:04-8]{Auftragsverarbeiter} über eine solche Fristverlängerung innerhalb eines Monats nach Eingang des Antrags auf
    Konsultation zusammen mit den Gründen für die Verzögerung. Diese Fristen können ausgesetzt werden, bis die
    \hyperref[itm:04-21]{Aufsichtsbehörde} die für die Zwecke der Konsultation angeforderten Informationen erhalten hat.
   \label{itm:36-2}
@@ -30,7 +30,7 @@
   \begin{enumerate}
   
     \item gegebenenfalls Angaben zu den jeweiligen Zuständigkeiten des \hyperref[itm:04-7]{Verantwortlichen}, der gemeinsam \hyperref[itm:04-7]{Verantwortlichen}
-     und der an der \hyperref[itm:04-2]{Verarbeitung} beteiligten Auftragsverarbeiter, insbesondere bei einer \hyperref[itm:04-2]{Verarbeitung} innerhalb einer
+     und der an der \hyperref[itm:04-2]{Verarbeitung} beteiligten \hyperref[itm:04-8]{Auftragsverarbeiter}, insbesondere bei einer \hyperref[itm:04-2]{Verarbeitung} innerhalb einer
      Gruppe von \hyperref[itm:04-18]{Unternehmen};
     \label{itm:36-3a}
 
