--- a/artikel/37.tex
+++ b/artikel/37.tex
@@ -6,7 +6,7 @@
 
 \begin{enumerate}
 
-  \item Der \hyperref[itm:04-7]{Verantwortliche} und der Auftragsverarbeiter benennen auf jeden Fall einen Datenschutzbeauftragten, wenn
+  \item Der \hyperref[itm:04-7]{Verantwortliche} und der \hyperref[itm:04-8]{Auftragsverarbeiter} benennen auf jeden Fall einen Datenschutzbeauftragten, wenn
   \label{itm:37-1}
 
   \begin{enumerate}
@@ -15,12 +15,12 @@
      im Rahmen ihrer justiziellen Tätigkeit handeln,
     \label{itm:37-1a}
 
-    \item die Kerntätigkeit des \hyperref[itm:04-7]{Verantwortlichen} oder des Auftragsverarbeiters in der Durchführung von
+    \item die Kerntätigkeit des \hyperref[itm:04-7]{Verantwortlichen} oder des \hyperref[itm:04-8]{Auftragsverarbeiters} in der Durchführung von
      Verarbeitungsvorgängen besteht, welche aufgrund ihrer Art, ihres Umfangs und/oder ihrer Zwecke eine umfangreiche
      regelmäßige und systematische Überwachung von \hyperref[itm:04-1]{betroffenen Personen} erforderlich machen, oder
     \label{itm:37-1b}
 
-    \item die Kerntätigkeit des \hyperref[itm:04-7]{Verantwortlichen} oder des Auftragsverarbeiters in der umfangreichen \hyperref[itm:04-2]{Verarbeitung}
+    \item die Kerntätigkeit des \hyperref[itm:04-7]{Verantwortlichen} oder des \hyperref[itm:04-8]{Auftragsverarbeiters} in der umfangreichen \hyperref[itm:04-2]{Verarbeitung}
      besonderer Kategorien von Daten gemäß \hyperref[ch:9]{Artikel 9} oder von \hyperref[itm:04-1]{personenbezogenen Daten} über
      strafrechtliche Verurteilungen und Straftaten gemäß \hyperref[ch:10]{Artikel 10} besteht.
     \label{itm:37-1c}
@@ -31,16 +31,16 @@
    aus der Datenschutzbeauftragte leicht erreicht werden kann.
   \label{itm:37-2}
 
-  \item Falls es sich bei dem \hyperref[itm:04-7]{Verantwortlichen} oder dem Auftragsverarbeiter um eine Behörde oder öffentliche Stelle
+  \item Falls es sich bei dem \hyperref[itm:04-7]{Verantwortlichen} oder dem \hyperref[itm:04-8]{Auftragsverarbeiter} um eine Behörde oder öffentliche Stelle
    handelt, kann für mehrere solcher Behörden oder Stellen unter Berücksichtigung ihrer Organisationsstruktur und ihrer
    Größe ein gemeinsamer Datenschutzbeauftragter benannt werden.
   \label{itm:37-3}
 
   \item In anderen als den in \hyperref[itm:37-1]{Absatz 1} genannten Fällen können der \hyperref[itm:04-7]{Verantwortliche} oder der
-   Auftragsverarbeiter oder Verbände und andere Vereinigungen, die Kategorien von \hyperref[itm:04-7]{Verantwortlichen} oder
-   Auftragsverarbeitern vertreten, einen Datenschutzbeauftragten benennen; falls dies nach dem Recht der Union oder der
+   \hyperref[itm:04-8]{Auftragsverarbeiter} oder Verbände und andere Vereinigungen, die Kategorien von \hyperref[itm:04-7]{Verantwortlichen} oder
+   \hyperref[itm:04-8]{Auftragsverarbeitern} vertreten, einen Datenschutzbeauftragten benennen; falls dies nach dem Recht der Union oder der
    Mitgliedstaaten vorgeschrieben ist, müssen sie einen solchen benennen. Der Datenschutzbeauftragte kann für derartige
-   Verbände und andere Vereinigungen, die \hyperref[itm:04-7]{Verantwortliche} oder Auftragsverarbeiter vertreten, handeln.
+   Verbände und andere Vereinigungen, die \hyperref[itm:04-7]{Verantwortliche} oder \hyperref[itm:04-8]{Auftragsverarbeiter} vertreten, handeln.
   \label{itm:37-4}
 
   \item Der Datenschutzbeauftragte wird auf der Grundlage seiner beruflichen Qualifikation und insbesondere des
@@ -48,11 +48,11 @@
    Grundlage seiner Fähigkeit zur Erfüllung der in \hyperref[ch:39]{Artikel 39} genannten Aufgaben.
   \label{itm:37-5}
 
-  \item Der Datenschutzbeauftragte kann Beschäftigter des \hyperref[itm:04-7]{Verantwortlichen} oder des Auftragsverarbeiters sein oder seine
+  \item Der Datenschutzbeauftragte kann Beschäftigter des \hyperref[itm:04-7]{Verantwortlichen} oder des \hyperref[itm:04-8]{Auftragsverarbeiters} sein oder seine
    Aufgaben auf der Grundlage eines Dienstleistungsvertrags erfüllen.
   \label{itm:37-6}
 
-  \item Der \hyperref[itm:04-7]{Verantwortliche} oder der Auftragsverarbeiter veröffentlicht die Kontaktdaten des Datenschutzbeauftragten und
+  \item Der \hyperref[itm:04-7]{Verantwortliche} oder der \hyperref[itm:04-8]{Auftragsverarbeiter} veröffentlicht die Kontaktdaten des Datenschutzbeauftragten und
    teilt diese Daten der \hyperref[itm:04-21]{Aufsichtsbehörde} mit.
   \label{itm:37-7}
 
