--- a/artikel/39.tex
+++ b/artikel/39.tex
@@ -11,13 +11,13 @@
 
   \begin{enumerate}
   
-    \item Unterrichtung und Beratung des \hyperref[itm:04-7]{Verantwortlichen} oder des Auftragsverarbeiters und der Beschäftigten, die
+    \item Unterrichtung und Beratung des \hyperref[itm:04-7]{Verantwortlichen} oder des \hyperref[itm:04-8]{Auftragsverarbeiters} und der Beschäftigten, die
      \hyperref[itm:04-2]{Verarbeitungen} durchführen, hinsichtlich ihrer Pflichten nach dieser Verordnung sowie nach sonstigen
      Datenschutzvorschriften der Union bzw. der Mitgliedstaaten;
     \label{itm:39-1a}
 
     \item Überwachung der Einhaltung dieser Verordnung, anderer Datenschutzvorschriften der Union bzw. der
-     Mitgliedstaaten sowie der Strategien des \hyperref[itm:04-7]{Verantwortlichen} oder des Auftragsverarbeiters für den Schutz
+     Mitgliedstaaten sowie der Strategien des \hyperref[itm:04-7]{Verantwortlichen} oder des \hyperref[itm:04-8]{Auftragsverarbeiters} für den Schutz
      \hyperref[itm:04-1]{personenbezogener Daten} einschließlich der Zuweisung von Zuständigkeiten, der Sensibilisierung und Schulung der an
      den Verarbeitungsvorgängen beteiligten Mitarbeiter und der diesbezüglichen Überprüfungen;
     \label{itm:39-1b}
