--- a/artikel/40.tex
+++ b/artikel/40.tex
@@ -12,7 +12,7 @@
    Verordnung beitragen sollen.
   \label{itm:40-1}
 
-  \item Verbände und andere Vereinigungen, die Kategorien von \hyperref[itm:04-7]{Verantwortlichen} oder Auftragsverarbeitern vertreten,
+  \item Verbände und andere Vereinigungen, die Kategorien von \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref[itm:04-8]{Auftragsverarbeitern} vertreten,
    können Verhaltensregeln ausarbeiten oder ändern oder erweitern, mit denen die Anwendung dieser Verordnung
    beispielsweise zu dem Folgenden präzisiert wird:
   \label{itm:40-2}
@@ -59,20 +59,20 @@
 
   \end{enumerate}
 
-  \item Zusätzlich zur Einhaltung durch die unter diese Verordnung fallenden \hyperref[itm:04-7]{Verantwortlichen} oder Auftragsverarbeiter
+  \item Zusätzlich zur Einhaltung durch die unter diese Verordnung fallenden \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref[itm:04-8]{Auftragsverarbeiter}
    können Verhaltensregeln, die gemäß \hyperref[itm:40-5]{Absatz 5 des vorliegenden Artikels} genehmigt wurden und
    gemäß \hyperref[itm:40-9]{Absatz 9 des vorliegenden Artikels} allgemeine Gültigkeit besitzen, können auch von
-   \hyperref[itm:04-7]{Verantwortlichen} oder Auftragsverarbeitern, die gemäß \hyperref[ch:3]{Artikel 3} nicht unter diese Verordnung
+   \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref[itm:04-8]{Auftragsverarbeitern}, die gemäß \hyperref[ch:3]{Artikel 3} nicht unter diese Verordnung
    fallen, eingehalten werden, um geeignete Garantien im Rahmen der Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an Drittländer
    oder \hyperref[itm:04-29]{internationale Organisationen} nach Maßgabe des \hyperref[itm:46-2e]{Artikels 46 Absatz 2 Buchstabe e} zu
-   bieten. Diese \hyperref[itm:04-7]{Verantwortlichen} oder Auftragsverarbeiter gehen mittels vertraglicher oder sonstiger rechtlich
+   bieten. Diese \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref[itm:04-8]{Auftragsverarbeiter} gehen mittels vertraglicher oder sonstiger rechtlich
    bindender Instrumente die verbindliche und durchsetzbare Verpflichtung ein, die geeigneten Garantien anzuwenden,
    auch im Hinblick auf die Rechte der \hyperref[itm:04-1]{betroffenen Personen}.
   \label{itm:40-3}
 
   \item Die Verhaltensregeln gemäß \hyperref[itm:40-2]{Absatz 2 des vorliegenden Artikels} müssen Verfahren vorsehen,
    die es der in \hyperref[itm:41-2]{Artikel 41 Absatz 1} genannten Stelle ermöglichen, die obligatorische Überwachung
-   der Einhaltung ihrer Bestimmungen durch die \hyperref[itm:04-7]{Verantwortlichen} oder die Auftragsverarbeiter, die sich zur Anwendung
+   der Einhaltung ihrer Bestimmungen durch die \hyperref[itm:04-7]{Verantwortlichen} oder die \hyperref[itm:04-8]{Auftragsverarbeiter}, die sich zur Anwendung
    der Verhaltensregeln verpflichten, vorzunehmen, unbeschadet der Aufgaben und Befugnisse der \hyperref[itm:04-21]{Aufsichtsbehörde}, die
    nach Artikel \hyperref[ch:55]{55} oder \hyperref[ch:56]{56} zuständig ist.
   \label{itm:40-4}
