--- a/artikel/41.tex
+++ b/artikel/41.tex
@@ -22,13 +22,13 @@
      zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} nachgewiesen hat;
     \label{itm:41-2a}
 
-    \item Verfahren festgelegt hat, die es ihr ermöglichen, zu bewerten, ob \hyperref[itm:04-7]{Verantwortliche} und Auftragsverarbeiter die
+    \item Verfahren festgelegt hat, die es ihr ermöglichen, zu bewerten, ob \hyperref[itm:04-7]{Verantwortliche} und \hyperref[itm:04-8]{Auftragsverarbeiter} die
      Verhaltensregeln anwenden können, die Einhaltung der Verhaltensregeln durch die \hyperref[itm:04-7]{Verantwortlichen} und
-     Auftragsverarbeiter zu überwachen und die Anwendung der Verhaltensregeln regelmäßig zu überprüfen;
+     \hyperref[itm:04-8]{Auftragsverarbeiter} zu überwachen und die Anwendung der Verhaltensregeln regelmäßig zu überprüfen;
     \label{itm:41-2b}
 
     \item Verfahren und Strukturen festgelegt hat, mit denen sie Beschwerden über Verletzungen der Verhaltensregeln oder
-     über die Art und Weise, in der die Verhaltensregeln von dem \hyperref[itm:04-7]{Verantwortlichen} oder dem Auftragsverarbeiter
+     über die Art und Weise, in der die Verhaltensregeln von dem \hyperref[itm:04-7]{Verantwortlichen} oder dem \hyperref[itm:04-8]{Auftragsverarbeiter}
      angewendet werden oder wurden, nachgeht und diese Verfahren und Strukturen für \hyperref[itm:04-1]{betroffene Personen} und die
      Öffentlichkeit transparent macht, und
     \label{itm:41-2c}
@@ -45,9 +45,9 @@
 
   \item Unbeschadet der Aufgaben und Befugnisse der zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} und der Bestimmungen des \hyperref
    [part:8]{Kapitels VIII} ergreift eine Stelle gemäß \hyperref[itm:41-1]{Absatz 1} vorbehaltlich geeigneter Garantien
-   im Falle einer Verletzung der Verhaltensregeln durch einen \hyperref[itm:04-7]{Verantwortlichen} oder einen Auftragsverarbeiter geeignete
+   im Falle einer Verletzung der Verhaltensregeln durch einen \hyperref[itm:04-7]{Verantwortlichen} oder einen \hyperref[itm:04-8]{Auftragsverarbeiter} geeignete
    Maßnahmen, einschließlich eines vorläufigen oder endgültigen Ausschlusses des \hyperref[itm:04-7]{Verantwortlichen} oder
-   Auftragsverarbeiters von den Verhaltensregeln. Sie unterrichtet die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} über solche
+   \hyperref[itm:04-8]{Auftragsverarbeiters} von den Verhaltensregeln. Sie unterrichtet die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} über solche
    Maßnahmen und deren Begründung.
   \label{itm:41-4}
 
