--- a/artikel/43.tex
+++ b/artikel/43.tex
@@ -47,7 +47,7 @@
     \label{itm:43-2c}
 
     \item Verfahren und Strukturen festgelegt haben, mit denen sie Beschwerden über Verletzungen der Zertifizierung oder
-     die Art und Weise, in der die Zertifizierung von dem \hyperref[itm:04-7]{Verantwortlichen} oder dem Auftragsverarbeiter umgesetzt wird
+     die Art und Weise, in der die Zertifizierung von dem \hyperref[itm:04-7]{Verantwortlichen} oder dem \hyperref[itm:04-8]{Auftragsverarbeiter} umgesetzt wird
      oder wurde, nachgehen und diese Verfahren und Strukturen für \hyperref[itm:04-1]{betroffene Personen} und die Öffentlichkeit
      transparent machen, und
     \label{itm:43-2d}
@@ -68,7 +68,7 @@
   \label{itm:43-3}
 
   \item Die Zertifizierungsstellen nach \hyperref[itm:43-1]{Absatz 1} sind unbeschadet der Verantwortung, die der
-   \hyperref[itm:04-7]{Verantwortliche} oder der Auftragsverarbeiter für die Einhaltung dieser Verordnung hat, für die angemessene
+   \hyperref[itm:04-7]{Verantwortliche} oder der \hyperref[itm:04-8]{Auftragsverarbeiter} für die Einhaltung dieser Verordnung hat, für die angemessene
    Bewertung, die der Zertifizierung oder dem Widerruf einer Zertifizierung zugrunde liegt, verantwortlich. Die
    Akkreditierung wird für eine Höchstdauer von fünf Jahren erteilt und kann unter denselben Bedingungen verlängert
    werden, sofern die Zertifizierungsstelle die Anforderungen dieses Artikels erfüllt.
