--- a/artikel/46.tex
+++ b/artikel/46.tex
@@ -7,8 +7,8 @@
 \begin{enumerate}
 
   \item Falls kein Beschluss nach \hyperref[itm:45-3]{Artikel 45 Absatz 3} vorliegt, darf ein \hyperref[itm:04-7]{Verantwortlicher} oder ein
-   Auftragsverarbeiter \hyperref[itm:04-1]{personenbezogene Daten} an ein Drittland oder eine \hyperref[itm:04-29]{internationale Organisation} nur übermitteln,
-   sofern der \hyperref[itm:04-7]{Verantwortliche} oder der Auftragsverarbeiter geeignete Garantien vorgesehen hat und sofern den
+   \hyperref[itm:04-8]{Auftragsverarbeiter} \hyperref[itm:04-1]{personenbezogene Daten} an ein Drittland oder eine \hyperref[itm:04-29]{internationale Organisation} nur übermitteln,
+   sofern der \hyperref[itm:04-7]{Verantwortliche} oder der \hyperref[itm:04-8]{Auftragsverarbeiter} geeignete Garantien vorgesehen hat und sofern den
    \hyperref[itm:04-1]{betroffenen Personen} durchsetzbare Rechte und wirksame Rechtsbehelfe zur Verfügung stehen.
   \label{itm:46-1}
 
@@ -33,12 +33,12 @@
     \label{itm:46-2d}
 
     \item genehmigten Verhaltensregeln gemäß \hyperref[ch:40]{Artikel 40} zusammen mit rechtsverbindlichen und
-     durchsetzbaren Verpflichtungen des \hyperref[itm:04-7]{Verantwortlichen} oder des Auftragsverarbeiters in dem Drittland zur Anwendung
+     durchsetzbaren Verpflichtungen des \hyperref[itm:04-7]{Verantwortlichen} oder des \hyperref[itm:04-8]{Auftragsverarbeiters} in dem Drittland zur Anwendung
      der geeigneten Garantien, einschließlich in Bezug auf die Rechte der \hyperref[itm:04-1]{betroffenen Personen}, oder
     \label{itm:46-2e}
 
     \item einem genehmigten Zertifizierungsmechanismus gemäß \hyperref[ch:42]{Artikel 42} zusammen mit
-     rechtsverbindlichen und durchsetzbaren Verpflichtungen des \hyperref[itm:04-7]{Verantwortlichen} oder des Auftragsverarbeiters in dem
+     rechtsverbindlichen und durchsetzbaren Verpflichtungen des \hyperref[itm:04-7]{Verantwortlichen} oder des \hyperref[itm:04-8]{Auftragsverarbeiters} in dem
      Drittland zur Anwendung der geeigneten Garantien, einschließlich in Bezug auf die Rechte der \hyperref[itm:04-1]{betroffenen
      Personen}.
     \label{itm:46-2f}
@@ -51,8 +51,8 @@
 
   \begin{enumerate}
   
-    \item Vertragsklauseln, die zwischen dem \hyperref[itm:04-7]{Verantwortlichen} oder dem Auftragsverarbeiter und dem \hyperref[itm:04-7]{Verantwortlichen}, dem
-     Auftragsverarbeiter oder dem Empfänger der \hyperref[itm:04-1]{personenbezogenen Daten} im Drittland oder der internationalen
+    \item Vertragsklauseln, die zwischen dem \hyperref[itm:04-7]{Verantwortlichen} oder dem \hyperref[itm:04-8]{Auftragsverarbeiter} und dem \hyperref[itm:04-7]{Verantwortlichen}, dem
+     \hyperref[itm:04-8]{Auftragsverarbeiter} oder dem Empfänger der \hyperref[itm:04-1]{personenbezogenen Daten} im Drittland oder der internationalen
      Organisation vereinbart wurden, oder
     \label{itm:46-3a}
 
