--- a/artikel/47.tex
+++ b/artikel/47.tex
@@ -60,10 +60,10 @@
      und gegebenenfalls Schadenersatz zu erhalten;
     \label{itm:47-2e}
 
-    \item die von dem in einem Mitgliedstaat niedergelassenen \hyperref[itm:04-7]{Verantwortlichen} oder Auftragsverarbeiter übernommene
+    \item die von dem in einem Mitgliedstaat niedergelassenen \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref[itm:04-8]{Auftragsverarbeiter} übernommene
      Haftung für etwaige Verstöße eines nicht in der Union niedergelassenen betreffenden Mitglieds der
      \hyperref[itm:04-19]{Unternehmensgruppe} gegen die \hyperref[itm:04-20]{verbindlichen internen Datenschutzvorschriften}; der \hyperref[itm:04-7]{Verantwortliche} oder der
-     Auftragsverarbeiter ist nur dann teilweise oder vollständig von dieser Haftung befreit, wenn er nachweist, dass
+     \hyperref[itm:04-8]{Auftragsverarbeiter} ist nur dann teilweise oder vollständig von dieser Haftung befreit, wenn er nachweist, dass
      der Umstand, durch den der Schaden eingetreten ist, dem betreffenden Mitglied nicht zur Last gelegt werden kann;
     \label{itm:47-2f}
 
@@ -114,7 +114,7 @@
   \end{enumerate}
 
   \item Die Kommission kann das Format und die Verfahren für den Informationsaustausch über \hyperref[itm:04-20]{verbindliche interne
-   Datenschutzvorschriften} im Sinne des vorliegenden Artikels zwischen \hyperref[itm:04-7]{Verantwortlichen}, Auftragsverarbeitern und
+   Datenschutzvorschriften} im Sinne des vorliegenden Artikels zwischen \hyperref[itm:04-7]{Verantwortlichen}, \hyperref[itm:04-8]{Auftragsverarbeitern} und
    \hyperref[itm:04-21]{Aufsichtsbehörden} festlegen. Diese Durchführungsrechtsakte werden gemäß dem Prüfverfahren nach \hyperref[itm:93-2]
    {Artikel 93 Absatz 2} erlassen.
   \label{itm:47-3}
