--- a/artikel/48.tex
+++ b/artikel/48.tex
@@ -5,7 +5,7 @@
 \addsec{Text der Verordnung}
 
 Jegliches Urteil eines Gerichts eines Drittlands und jegliche Entscheidung einer Verwaltungsbehörde eines Drittlands,
-mit denen von einem \hyperref[itm:04-7]{Verantwortlichen} oder einem Auftragsverarbeiter die Übermittlung oder Offenlegung personenbezogener
+mit denen von einem \hyperref[itm:04-7]{Verantwortlichen} oder einem \hyperref[itm:04-8]{Auftragsverarbeiter} die Übermittlung oder Offenlegung personenbezogener
 Daten verlangt wird, dürfen unbeschadet anderer Gründe für die Übermittlung gemäß diesem Kapitel jedenfalls nur dann
 anerkannt oder vollstreckbar werden, wenn sie auf eine in Kraft befindliche internationale Übereinkunft wie etwa ein
 Rechtshilfeabkommen zwischen dem ersuchenden Drittland und der Union oder einem Mitgliedstaat gestützt sind.
