--- a/artikel/49.tex
+++ b/artikel/49.tex
@@ -81,7 +81,7 @@
    teilen der Kommission derartige Bestimmungen mit.
   \label{itm:49-5}
 
-  \item Der \hyperref[itm:04-7]{Verantwortliche} oder der Auftragsverarbeiter erfasst die von ihm vorgenommene Beurteilung sowie die
+  \item Der \hyperref[itm:04-7]{Verantwortliche} oder der \hyperref[itm:04-8]{Auftragsverarbeiter} erfasst die von ihm vorgenommene Beurteilung sowie die
    angemessenen Garantien im Sinne des \hyperref[itm:49-1-2]{Absatzes 1 Unterabsatz 2 des vorliegenden Artikels} in der
    Dokumentation gemäß \hyperref[ch:30]{Artikel 30}.
   \label{itm:49-6}
