--- a/artikel/57.tex
+++ b/artikel/57.tex
@@ -23,7 +23,7 @@
      Personen in Bezug auf die \hyperref[itm:04-2]{Verarbeitung} beraten;
     \label{itm:57-1c}
 
-    \item die \hyperref[itm:04-7]{Verantwortlichen} und die Auftragsverarbeiter für die ihnen aus dieser Verordnung entstehenden Pflichten
+    \item die \hyperref[itm:04-7]{Verantwortlichen} und die \hyperref[itm:04-8]{Auftragsverarbeiter} für die ihnen aus dieser Verordnung entstehenden Pflichten
      sensibilisieren;
     \label{itm:57-1d}
 
