--- a/artikel/62.tex
+++ b/artikel/62.tex
@@ -11,7 +11,7 @@
    Mitgliedstaaten teilnehmen.
   \label{itm:62-1}
 
-  \item Verfügt der \hyperref[itm:04-7]{Verantwortliche} oder der Auftragsverarbeiter über Niederlassungen in mehreren Mitgliedstaaten oder
+  \item Verfügt der \hyperref[itm:04-7]{Verantwortliche} oder der \hyperref[itm:04-8]{Auftragsverarbeiter} über Niederlassungen in mehreren Mitgliedstaaten oder
    werden die Verarbeitungsvorgänge voraussichtlich auf eine bedeutende Zahl \hyperref[itm:04-1]{betroffener Personen} in mehr als einem
    Mitgliedstaat erhebliche Auswirkungen haben, ist die \hyperref[itm:04-21]{Aufsichtsbehörde} jedes dieser Mitgliedstaaten berechtigt, an
    den gemeinsamen Maßnahmen teilzunehmen. Die gemäß \hyperref[itm:56-1]{Artikel 56 Absatz 1} oder \hyperref[itm:56-4]
