--- a/artikel/03.tex
+++ b/artikel/03.tex
@@ -7,13 +7,13 @@
 \begin{enumerate}
 
   \item Diese Verordnung findet Anwendung auf die \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten}, soweit
-   diese im Rahmen der Tätigkeiten einer Niederlassung eines \hyperref[itm:04-7]{Verantwortlichen} oder eines Auftragsverarbeiters in der
+   diese im Rahmen der Tätigkeiten einer Niederlassung eines \hyperref[itm:04-7]{Verantwortlichen} oder eines \hyperref[itm:04-8]{Auftragsverarbeiters} in der
    Union erfolgt, unabhängig davon, ob die \hyperref[itm:04-2]{Verarbeitung} in der Union stattfindet.
   \label{itm:03-1}
 
   \item Diese Verordnung findet Anwendung auf die \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten} von
    \hyperref[itm:04-1]{betroffenen Personen}, die sich in der Union befinden, durch einen nicht in der Union niedergelassenen
-   \hyperref[itm:04-7]{Verantwortlichen} oder Auftragsverarbeiter, wenn die Datenverarbeitung im Zusammenhang damit steht
+   \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref[itm:04-8]{Auftragsverarbeiter}, wenn die Datenverarbeitung im Zusammenhang damit steht
   \label{itm:03-2}
 
   \begin{enumerate}
