--- a/artikel/28.tex
+++ b/artikel/28.tex
@@ -6,33 +6,33 @@
 
 \begin{enumerate}
 
-  \item Erfolgt eine \hyperref[itm:04-2]{Verarbeitung} im Auftrag eines \hyperref[itm:04-7]{Verantwortlichen}, so arbeitet dieser nur mit Auftragsverarbeitern,
+  \item Erfolgt eine \hyperref[itm:04-2]{Verarbeitung} im Auftrag eines \hyperref[itm:04-7]{Verantwortlichen}, so arbeitet dieser nur mit \hyperref[itm:04-8]{Auftragsverarbeitern},
    die hinreichend Garantien dafür bieten, dass geeignete technische und organisatorische Maßnahmen so durchgeführt
    werden, dass die \hyperref[itm:04-2]{Verarbeitung} im Einklang mit den Anforderungen dieser Verordnung erfolgt und den Schutz der Rechte
    der \hyperref[itm:04-1]{betroffenen Person} gewährleistet.
   \label{itm:28-1}
 
-  \item Der Auftragsverarbeiter nimmt keinen weiteren Auftragsverarbeiter ohne vorherige gesonderte oder allgemeine
+  \item Der \hyperref[itm:04-8]{Auftragsverarbeiter} nimmt keinen weiteren \hyperref[itm:04-8]{Auftragsverarbeiter} ohne vorherige gesonderte oder allgemeine
    schriftliche Genehmigung des \hyperref[itm:04-7]{Verantwortlichen} in Anspruch. Im Fall einer allgemeinen schriftlichen Genehmigung
-   informiert der Auftragsverarbeiter den \hyperref[itm:04-7]{Verantwortlichen} immer über jede beabsichtigte Änderung in Bezug auf die
-   Hinzuziehung oder die Ersetzung anderer Auftragsverarbeiter, wodurch der \hyperref[itm:04-7]{Verantwortliche} die Möglichkeit erhält,
+   informiert der \hyperref[itm:04-8]{Auftragsverarbeiter} den \hyperref[itm:04-7]{Verantwortlichen} immer über jede beabsichtigte Änderung in Bezug auf die
+   Hinzuziehung oder die Ersetzung anderer \hyperref[itm:04-8]{Auftragsverarbeiter}, wodurch der \hyperref[itm:04-7]{Verantwortliche} die Möglichkeit erhält,
    gegen derartige Änderungen Einspruch zu erheben.
   \label{itm:28-2}
 
-  \item Die \hyperref[itm:04-2]{Verarbeitung} durch einen Auftragsverarbeiter erfolgt auf der Grundlage eines Vertrags oder eines anderen
-   Rechtsinstruments nach dem Unionsrecht oder dem Recht der Mitgliedstaaten, der bzw. das den Auftragsverarbeiter in
+  \item Die \hyperref[itm:04-2]{Verarbeitung} durch einen \hyperref[itm:04-8]{Auftragsverarbeiter} erfolgt auf der Grundlage eines Vertrags oder eines anderen
+   Rechtsinstruments nach dem Unionsrecht oder dem Recht der Mitgliedstaaten, der bzw. das den \hyperref[itm:04-8]{Auftragsverarbeiter} in
    Bezug auf den \hyperref[itm:04-7]{Verantwortlichen} bindet und in dem Gegenstand und Dauer der \hyperref[itm:04-2]{Verarbeitung}, Art und Zweck der
    \hyperref[itm:04-2]{Verarbeitung}, die Art der \hyperref[itm:04-1]{personenbezogenen Daten}, die Kategorien \hyperref[itm:04-1]{betroffener Personen} und die Pflichten und Rechte
    des \hyperref[itm:04-7]{Verantwortlichen} festgelegt sind. Dieser Vertrag bzw. dieses andere Rechtsinstrument sieht insbesondere vor,
-   dass der Auftragsverarbeiter
+   dass der \hyperref[itm:04-8]{Auftragsverarbeiter}
   \label{itm:28-3-1}
 
   \begin{enumerate}
   
     \item die \hyperref[itm:04-1]{personenbezogenen Daten} nur auf dokumentierte Weisung des \hyperref[itm:04-7]{Verantwortlichen} -- auch in Bezug auf die
      Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an ein Drittland oder eine \hyperref[itm:04-29]{internationale Organisation} -- verarbeitet, sofern
-     er nicht durch das Recht der Union oder der Mitgliedstaaten, dem der Auftragsverarbeiter unterliegt, hierzu
-     verpflichtet ist; in einem solchen Fall teilt der Auftragsverarbeiter dem \hyperref[itm:04-7]{Verantwortlichen} diese rechtlichen
+     er nicht durch das Recht der Union oder der Mitgliedstaaten, dem der \hyperref[itm:04-8]{Auftragsverarbeiter} unterliegt, hierzu
+     verpflichtet ist; in einem solchen Fall teilt der \hyperref[itm:04-8]{Auftragsverarbeiter} dem \hyperref[itm:04-7]{Verantwortlichen} diese rechtlichen
      Anforderungen vor der \hyperref[itm:04-2]{Verarbeitung} mit, sofern das betreffende Recht eine solche Mitteilung nicht wegen eines
      wichtigen öffentlichen Interesses verbietet;
     \label{itm:28-3-1a}
@@ -45,7 +45,7 @@
     \label{itm:28-3-1c}
 
     \item die in den Absätzen \hyperref[itm:28-2]{2} und \hyperref[itm:28-4]{4} genannten Bedingungen für die
-     Inanspruchnahme der Dienste eines weiteren Auftragsverarbeiters einhält;
+     Inanspruchnahme der Dienste eines weiteren \hyperref[itm:04-8]{Auftragsverarbeiters} einhält;
     \label{itm:28-3-1d}
 
     \item angesichts der Art der \hyperref[itm:04-2]{Verarbeitung} den \hyperref[itm:04-7]{Verantwortlichen} nach Möglichkeit mit geeigneten technischen und
@@ -72,35 +72,35 @@
   \end{enumerate}
 
   \phantomsection
-  Mit Blick auf \hyperref[itm:28-3-1h]{Unterabsatz 1 Buchstabe h} informiert der Auftragsverarbeiter den
+  Mit Blick auf \hyperref[itm:28-3-1h]{Unterabsatz 1 Buchstabe h} informiert der \hyperref[itm:04-8]{Auftragsverarbeiter} den
   \hyperref[itm:04-7]{Verantwortlichen}
   unverzüglich, falls er der Auffassung ist, dass eine Weisung gegen diese Verordnung oder gegen andere
   Datenschutzbestimmungen der Union oder der Mitgliedstaaten verstößt.
   \label{itm:28-3-2}
 
-  \item Nimmt der Auftragsverarbeiter die Dienste eines weiteren Auftragsverarbeiters in Anspruch, um bestimmte
-   Verarbeitungstätigkeiten im Namen des \hyperref[itm:04-7]{Verantwortlichen} auszuführen, so werden diesem weiteren Auftragsverarbeiter im
+  \item Nimmt der \hyperref[itm:04-8]{Auftragsverarbeiter} die Dienste eines weiteren \hyperref[itm:04-8]{Auftragsverarbeiters} in Anspruch, um bestimmte
+   Verarbeitungstätigkeiten im Namen des \hyperref[itm:04-7]{Verantwortlichen} auszuführen, so werden diesem weiteren \hyperref[itm:04-8]{Auftragsverarbeiter} im
    Wege eines Vertrags oder eines anderen Rechtsinstruments nach dem Unionsrecht oder dem Recht des betreffenden
    Mitgliedstaats dieselben Datenschutzpflichten auferlegt, die in dem Vertrag oder anderen Rechtsinstrument zwischen
-   dem \hyperref[itm:04-7]{Verantwortlichen} und dem Auftragsverarbeiter gemäß \hyperref[itm:28-3-1]{Absatz 3} festgelegt sind, wobei
+   dem \hyperref[itm:04-7]{Verantwortlichen} und dem \hyperref[itm:04-8]{Auftragsverarbeiter} gemäß \hyperref[itm:28-3-1]{Absatz 3} festgelegt sind, wobei
    insbesondere hinreichende Garantien dafür geboten werden muss, dass die geeigneten technischen und organisatorischen
    Maßnahmen so durchgeführt werden, dass die \hyperref[itm:04-2]{Verarbeitung} entsprechend den Anforderungen dieser Verordnung erfolgt.
-   Kommt der weitere Auftragsverarbeiter seinen Datenschutzpflichten nicht nach, so haftet der erste
-   Auftragsverarbeiter gegenüber dem \hyperref[itm:04-7]{Verantwortlichen} für die Einhaltung der Pflichten jenes anderen
-   Auftragsverarbeiters.
+   Kommt der weitere \hyperref[itm:04-8]{Auftragsverarbeiter} seinen Datenschutzpflichten nicht nach, so haftet der erste
+   \hyperref[itm:04-8]{Auftragsverarbeiter} gegenüber dem \hyperref[itm:04-7]{Verantwortlichen} für die Einhaltung der Pflichten jenes anderen
+   \hyperref[itm:04-8]{Auftragsverarbeiters}.
   \label{itm:28-4}
 
   \item Die Einhaltung genehmigter Verhaltensregeln gemäß \hyperref[ch:40]{Artikel 40} oder eines genehmigten
-   Zertifizierungsverfahrens gemäß \hyperref[ch:42]{Artikel 42} durch einen Auftragsverarbeiter kann als Faktor
+   Zertifizierungsverfahrens gemäß \hyperref[ch:42]{Artikel 42} durch einen \hyperref[itm:04-8]{Auftragsverarbeiter} kann als Faktor
    herangezogen werden, um hinreichende Garantien im Sinne der Absätze \hyperref[itm:28-1]{1} und \hyperref[itm:28-4]
    {4} des vorliegenden Artikels nachzuweisen.
   \label{itm:28-5}
 
-  \item Unbeschadet eines individuellen Vertrags zwischen dem \hyperref[itm:04-7]{Verantwortlichen} und dem Auftragsverarbeiter kann der
+  \item Unbeschadet eines individuellen Vertrags zwischen dem \hyperref[itm:04-7]{Verantwortlichen} und dem \hyperref[itm:04-8]{Auftragsverarbeiter} kann der
    Vertrag oder das andere Rechtsinstrument im Sinne der Absätze \hyperref[itm:28-3-1]{3} und \hyperref[itm:28-4]{4} des
    vorliegenden Artikels ganz oder teilweise auf den in den Absätzen \hyperref[itm:28-7]{7} und \hyperref[itm:28-8]
    {8} des vorliegenden Artikels genannten Standardvertragsklauseln beruhen, auch wenn diese Bestandteil einer dem
-   \hyperref[itm:04-7]{Verantwortlichen} oder dem Auftragsverarbeiter gemäß den Artikeln \hyperref[ch:42]{42} und \hyperref[ch:43]{43}
+   \hyperref[itm:04-7]{Verantwortlichen} oder dem \hyperref[itm:04-8]{Auftragsverarbeiter} gemäß den Artikeln \hyperref[ch:42]{42} und \hyperref[ch:43]{43}
    erteilten Zertifizierung sind.
   \label{itm:28-6}
 
@@ -120,7 +120,7 @@
   \label{itm:28-9}
 
   \item Unbeschadet der Artikel \hyperref[ch:82]{82}, \hyperref[ch:83]{83} und \hyperref[ch:84]{84} gilt ein
-   Auftragsverarbeiter, der unter Verstoß gegen diese Verordnung die Zwecke und Mittel der \hyperref[itm:04-2]{Verarbeitung} bestimmt, in
+   \hyperref[itm:04-8]{Auftragsverarbeiter}, der unter Verstoß gegen diese Verordnung die Zwecke und Mittel der \hyperref[itm:04-2]{Verarbeitung} bestimmt, in
    Bezug auf diese \hyperref[itm:04-2]{Verarbeitung} als \hyperref[itm:04-7]{Verantwortlicher}.
   \label{itm:28-10}
 
