--- a/artikel/30.tex
+++ b/artikel/30.tex
@@ -41,15 +41,15 @@
 
   \end{enumerate}
 
-  \item Jeder Auftragsverarbeiter und gegebenenfalls sein Vertreter führen ein Verzeichnis zu allen Kategorien von im
+  \item Jeder \hyperref[itm:04-8]{Auftragsverarbeiter} und gegebenenfalls sein Vertreter führen ein Verzeichnis zu allen Kategorien von im
    Auftrag eines \hyperref[itm:04-7]{Verantwortlichen} durchgeführten Tätigkeiten der \hyperref[itm:04-2]{Verarbeitung}, die Folgendes enthält:
   \label{itm:30-2}
 
   \begin{enumerate}
   
-    \item den Namen und die Kontaktdaten des Auftragsverarbeiters oder der Auftragsverarbeiter und jedes
-     \hyperref[itm:04-7]{Verantwortlichen}, in dessen Auftrag der Auftragsverarbeiter tätig ist, sowie gegebenenfalls des Vertreters des
-     \hyperref[itm:04-7]{Verantwortlichen} oder des Auftragsverarbeiters und eines etwaigen Datenschutzbeauftragten;
+    \item den Namen und die Kontaktdaten des \hyperref[itm:04-8]{Auftragsverarbeiters} oder der \hyperref[itm:04-8]{Auftragsverarbeiter} und jedes
+     \hyperref[itm:04-7]{Verantwortlichen}, in dessen Auftrag der \hyperref[itm:04-8]{Auftragsverarbeiter} tätig ist, sowie gegebenenfalls des Vertreters des
+     \hyperref[itm:04-7]{Verantwortlichen} oder des \hyperref[itm:04-8]{Auftragsverarbeiters} und eines etwaigen Datenschutzbeauftragten;
     \label{itm:30-2a}
 
     \item die Kategorien von \hyperref[itm:04-2]{Verarbeitungen}, die im Auftrag jedes \hyperref[itm:04-7]{Verantwortlichen} durchgeführt werden;
@@ -71,8 +71,8 @@
    führen, was auch in einem elektronischen Format erfolgen kann.
   \label{itm:30-3}
 
-  \item Der \hyperref[itm:04-7]{Verantwortliche} oder der Auftragsverarbeiter sowie gegebenenfalls der Vertreter des \hyperref[itm:04-7]{Verantwortlichen} oder
-   des Auftragsverarbeiters stellen der \hyperref[itm:04-21]{Aufsichtsbehörde} das Verzeichnis auf Anfrage zur Verfügung.
+  \item Der \hyperref[itm:04-7]{Verantwortliche} oder der \hyperref[itm:04-8]{Auftragsverarbeiter} sowie gegebenenfalls der Vertreter des \hyperref[itm:04-7]{Verantwortlichen} oder
+   des \hyperref[itm:04-8]{Auftragsverarbeiters} stellen der \hyperref[itm:04-21]{Aufsichtsbehörde} das Verzeichnis auf Anfrage zur Verfügung.
   \label{itm:30-4}
 
   \item Die in den Absätzen \hyperref[itm:30-1]{1} und \hyperref[itm:30-2]{2} genannten Pflichten gelten nicht für
