--- a/artikel/56.tex
+++ b/artikel/56.tex
@@ -7,9 +7,9 @@
 \begin{enumerate}
 
   \item Unbeschadet des \hyperref[ch:55]{Artikels 55} ist die \hyperref[itm:04-21]{Aufsichtsbehörde} der \hyperref[itm:04-16]{Hauptniederlassung} oder der einzigen
-   Niederlassung des \hyperref[itm:04-7]{Verantwortlichen} oder des Auftragsverarbeiters gemäß dem Verfahren nach \hyperref[ch:60]
+   Niederlassung des \hyperref[itm:04-7]{Verantwortlichen} oder des \hyperref[itm:04-8]{Auftragsverarbeiters} gemäß dem Verfahren nach \hyperref[ch:60]
    {Artikel 60} die zuständige federführende \hyperref[itm:04-21]{Aufsichtsbehörde} für die von diesem \hyperref[itm:04-7]{Verantwortlichen} oder diesem
-   Auftragsverarbeiter durchgeführte \hyperref[itm:04-23]{grenzüberschreitende Verarbeitung}.
+   \hyperref[itm:04-8]{Auftragsverarbeiter} durchgeführte \hyperref[itm:04-23]{grenzüberschreitende Verarbeitung}.
   \label{itm:56-1}
 
   \item Abweichend von \hyperref[itm:56-1]{Absatz 1} ist jede \hyperref[itm:04-21]{Aufsichtsbehörde} dafür zuständig, sich mit einer bei ihr
@@ -22,7 +22,7 @@
    \hyperref[itm:04-21]{Aufsichtsbehörde} unverzüglich die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} über diese Angelegenheit. Innerhalb einer Frist von
    drei Wochen nach der Unterrichtung entscheidet die federführende \hyperref[itm:04-21]{Aufsichtsbehörde}, ob sie sich mit dem Fall gemäß
    dem Verfahren nach \hyperref[ch:60]{Artikel 60} befasst oder nicht, wobei sie berücksichtigt, ob der \hyperref[itm:04-7]{Verantwortliche}
-   oder der Auftragsverarbeiter in dem Mitgliedstaat, dessen \hyperref[itm:04-21]{Aufsichtsbehörde} sie unterrichtet hat, eine Niederlassung
+   oder der \hyperref[itm:04-8]{Auftragsverarbeiter} in dem Mitgliedstaat, dessen \hyperref[itm:04-21]{Aufsichtsbehörde} sie unterrichtet hat, eine Niederlassung
    hat oder nicht.
   \label{itm:56-3}
 
@@ -38,7 +38,7 @@
   \label{itm:56-5}
 
   \item Die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} ist der einzige Ansprechpartner der \hyperref[itm:04-7]{Verantwortlichen} oder der
-   Auftragsverarbeiter für Fragen der von diesem \hyperref[itm:04-7]{Verantwortlichen} oder diesem Auftragsverarbeiter durchgeführten
+   \hyperref[itm:04-8]{Auftragsverarbeiter} für Fragen der von diesem \hyperref[itm:04-7]{Verantwortlichen} oder diesem \hyperref[itm:04-8]{Auftragsverarbeiter} durchgeführten
    \hyperref[itm:04-23]{grenzüberschreitenden Verarbeitung}.
   \label{itm:56-6}
 
