--- a/artikel/60.tex
+++ b/artikel/60.tex
@@ -14,7 +14,7 @@
   \item Die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} kann jederzeit andere \hyperref[itm:04-22]{betroffene Aufsichtsbehörden} um Amtshilfe gemäß
   \hyperref[ch:61]{Artikel 61} ersuchen und gemeinsame Maßnahmen gemäß \hyperref[ch:62]{Artikel 62} durchführen,
    insbesondere zur Durchführung von Untersuchungen oder zur Überwachung der Umsetzung einer Maßnahme in Bezug auf
-   einen \hyperref[itm:04-7]{Verantwortlichen} oder einen Auftragsverarbeiter, der in einem anderen Mitgliedstaat niedergelassen ist.
+   einen \hyperref[itm:04-7]{Verantwortlichen} oder einen \hyperref[itm:04-8]{Auftragsverarbeiter}, der in einem anderen Mitgliedstaat niedergelassen ist.
   \label{itm:60-2}
 
   \item Die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} übermittelt den anderen \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} unverzüglich die
@@ -42,7 +42,7 @@
   \label{itm:60-6}
 
   \item Die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} erlässt den Beschluss und teilt ihn der \hyperref[itm:04-16]{Hauptniederlassung} oder der einzigen
-   Niederlassung des \hyperref[itm:04-7]{Verantwortlichen} oder gegebenenfalls des Auftragsverarbeiters mit und setzt die anderen
+   Niederlassung des \hyperref[itm:04-7]{Verantwortlichen} oder gegebenenfalls des \hyperref[itm:04-8]{Auftragsverarbeiters} mit und setzt die anderen
    \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} und den Ausschuss von dem betreffenden Beschluss einschließlich einer Zusammenfassung
    der maßgeblichen Fakten und Gründe in Kenntnis. Die \hyperref[itm:04-21]{Aufsichtsbehörde}, bei der eine Beschwerde eingereicht worden
    ist, unterrichtet den Beschwerdeführer über den Beschluss.
@@ -57,17 +57,17 @@
    Beschwerde abzulehnen oder abzuweisen und bezüglich anderer Teile dieser Beschwerde tätig zu werden, so wird in
    dieser Angelegenheit für jeden dieser Teile ein eigener Beschluss erlassen. Die federführende \hyperref[itm:04-21]{Aufsichtsbehörde}
    erlässt den Beschluss für den Teil, der das Tätigwerden in Bezug auf den \hyperref[itm:04-7]{Verantwortlichen} betrifft, teilt ihn der
-   \hyperref[itm:04-16]{Hauptniederlassung} oder einzigen Niederlassung des \hyperref[itm:04-7]{Verantwortlichen} oder des Auftragsverarbeiters im Hoheitsgebiet
+   \hyperref[itm:04-16]{Hauptniederlassung} oder einzigen Niederlassung des \hyperref[itm:04-7]{Verantwortlichen} oder des \hyperref[itm:04-8]{Auftragsverarbeiters} im Hoheitsgebiet
    ihres Mitgliedstaats mit und setzt den Beschwerdeführer hiervon in Kenntnis, während die für den Beschwerdeführer
    zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} den Beschluss für den Teil erlässt, der die Ablehnung oder Abweisung dieser Beschwerde
-   betrifft, und ihn diesem Beschwerdeführer mitteilt und den \hyperref[itm:04-7]{Verantwortlichen} oder den Auftragsverarbeiter hiervon in
+   betrifft, und ihn diesem Beschwerdeführer mitteilt und den \hyperref[itm:04-7]{Verantwortlichen} oder den \hyperref[itm:04-8]{Auftragsverarbeiter} hiervon in
    Kenntnis setzt.
   \label{itm:60-9}
 
   \item Nach der Unterrichtung über den Beschluss der federführenden \hyperref[itm:04-21]{Aufsichtsbehörde} gemäß den Absätzen \hyperref
-   [itm:60-7]{7} und \hyperref[itm:60-9]{9} ergreift der \hyperref[itm:04-7]{Verantwortliche} oder der Auftragsverarbeiter die
+   [itm:60-7]{7} und \hyperref[itm:60-9]{9} ergreift der \hyperref[itm:04-7]{Verantwortliche} oder der \hyperref[itm:04-8]{Auftragsverarbeiter} die
    erforderlichen Maßnahmen, um die Verarbeitungstätigkeiten all seiner Niederlassungen in der Union mit dem Beschluss
-   in Einklang zu bringen. Der \hyperref[itm:04-7]{Verantwortliche} oder der Auftragsverarbeiter teilt der federführenden \hyperref[itm:04-21]{Aufsichtsbehörde}
+   in Einklang zu bringen. Der \hyperref[itm:04-7]{Verantwortliche} oder der \hyperref[itm:04-8]{Auftragsverarbeiter} teilt der federführenden \hyperref[itm:04-21]{Aufsichtsbehörde}
    die Maßnahmen mit, die zur Einhaltung des Beschlusses ergriffen wurden; diese wiederum unterrichtet die anderen
    \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden}.
   \label{itm:60-10}
