--- a/artikel/85.tex
+++ b/artikel/85.tex
@@ -14,7 +14,7 @@
   \item Für die \hyperref[itm:04-2]{Verarbeitung}, die zu journalistischen Zwecken oder zu wissenschaftlichen, künstlerischen oder
    literarischen Zwecken erfolgt, sehen die Mitgliedstaaten Abweichungen oder Ausnahmen von \hyperref[part:2]
    {Kapitel II} (Grundsätze), \hyperref[part:3]{Kapitel III} (Rechte der \hyperref[itm:04-1]{betroffenen Person}), \hyperref[part:4]
-   {Kapitel IV}(\hyperref[itm:04-7]{Verantwortlicher} und Auftragsverarbeiter), \hyperref[part:5]{Kapitel V} (Übermittlung personenbezogener
+   {Kapitel IV}(\hyperref[itm:04-7]{Verantwortlicher} und \hyperref[itm:04-8]{Auftragsverarbeiter}), \hyperref[part:5]{Kapitel V} (Übermittlung personenbezogener
    Daten an Drittländer oder an \hyperref[itm:04-29]{internationale Organisationen}), \hyperref[part:6]{Kapitel VI}
    (Unabhängige \hyperref[itm:04-21]{Aufsichtsbehörden}), \hyperref[part:7]{Kapitel VII}(Zusammenarbeit und Kohärenz) und \hyperref[part:9]
    {Kapitel IX} (Vorschriften für besondere Verarbeitungssituationen) vor, wenn dies erforderlich ist, um das Recht auf
